# FAF-141-Maxian-Nicu

IDE/lab2/core/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  polish.cpp  polish.h  strings.cpp  strings.h
IDE/lab2/gui/: CMakeLists.txt  Solver.cpp  Solver.h  layout.glade  main.cpp
IDE/lab3/: README.md
IDE/lab3/app/: build.gradle
IDE/lab5/: README.md  midps5.CSharp.csproj  midps5.sln
IDE/lab5/Assets/Materials/: fx_lazer_cyan_dff.mat
IDE/lab5/Assets/Prefabs/: Asteroid.prefab  Bolt.prefab  Enemy Bolt.prefab  Enemy.prefab  Player.prefab
IDE/lab5/Assets/Scenes/: Main.unity
IDE/lab5/ProjectSettings/: ProjectSettings.asset  TagManager.asset
WP/lab#1/: CMakeLists.txt  Label.cpp  Label.h  TextEdit.h  TextWidget.cpp  Widget.cpp  Widget.h  main.cpp
WP/lab#2/: Button.cpp  Button.h  CMakeLists.txt  Label.cpp  ListBox.cpp  ListBox.h  README.md  ScrollBar.cpp  ScrollBar.h  TextEdit.cpp  TextWidget.h  Widget.cpp  Widget.h  main.cpp
WP/lab#3/: Bezier.cpp  Bezier.h  Drawing.cpp  Drawing.h  Ellipse.cpp  Ellipse.h  Eraser.cpp  Eraser.h  FreeHand.cpp  FreeHand.h  Lab3WP.cpp  Lab3WP.h  Lab3WP.rc  Lab3WP.vcxproj  Lab3WP.vcxproj.filters  Line.cpp  Line.h  MultiPointDrawing.cpp  MultiPointDrawing.h  Pen.cpp  Pen.h  PolygonDrawing.cpp  PolygonDrawing.h  ReadMe.txt  Rectangle.cpp  Rectangle.h  TwoPointDrawing.cpp  TwoPointDrawing.h  resource.h  stdafx.cpp  stdafx.h
WP/lab#4/: lab4wp.sln
WP/lab#4/lab4wp/: Figure.cpp  Figure.h  ReadMe.txt  Resource.h  lab4wp.cpp  lab4wp.rc  lab4wp.vcxproj  lab4wp.vcxproj.filters  stdafx.cpp  stdafx.h
(+33 files in other folders)
